Fix some typeahead section grammar mistakes

--- a/index.html
+++ b/index.html
@@ -2281,17 +2281,17 @@ appendToBody: false
                 <p>Typeahead is a AngularJS version of <a href="http://twitter.github.com/bootstrap/javascript.html#typeahead">Twitter Bootstrap typeahead plugin</a>.
 This directive can be used to quickly create elegant typeheads with any form text input.</p>
 
-<p>It is very well integrated into the AngularJS as it uses subset of the
-<a href="http://docs.angularjs.org/api/ng.directive:select">select directive</a> syntax, which is very flexible. Supported expressions:</p>
+<p>It is very well integrated into AngularJS as it uses a subset of the
+<a href="http://docs.angularjs.org/api/ng.directive:select">select directive</a> syntax, which is very flexible. Supported expressions are:</p>
 
 <ul>
 <li><em>label</em> for <em>value</em> in <em>sourceArray</em></li>
 <li><em>select</em> as <em>label</em> for <em>value</em> in <em>sourceArray</em></li>
 </ul>
 
-<p>The <code>sourceArray</code> expression can use a special <code>$viewValue</code> variable that corresponds to a value entered inside input by a user.</p>
+<p>The <code>sourceArray</code> expression can use a special <code>$viewValue</code> variable that corresponds to the value entered inside the input.</p>
 
-<p>Also this directive works with promises and it means that you can retrieve matches using the <code>$http</code> service with minimal effort.</p>
+<p>This directive works with promises, meaning you can retrieve matches using the <code>$http</code> service with minimal effort.</p>
 
 <p>The typeahead directives provide several attributes:</p>
 
